--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -10,6 +10,7 @@
   "ARTIST": "Artists",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A to Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Share",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Switch theme",
