--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -10,6 +10,7 @@
   "ARTIST": "Artiesten",
   "ARTIST_SINGLE": "Artiest",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A tot Z",
   "BUFFERING": "Bufferen...",
   "CANCEL": "ANNULEER",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "Thema",
   "SHARE": "Delen",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Afspelen starten",
   "SWITCH_THEME": "Wissel Thema",
