--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -10,6 +10,7 @@
   "ARTIST": "Artister",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Stigande",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A till Ö",
   "BUFFERING": "Buffrar...",
   "CANCEL": "AVBRYT",
@@ -116,6 +117,7 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Dela",
   "SHOW_ALBUM": "Visa album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sortera Enligt",
   "STARTING_PLAYBACK": "Startar uppspelning",
   "SWITCH_THEME": "Byt tema",
