--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -10,6 +10,7 @@
   "ARTIST": "Artistes",
   "ARTIST_SINGLE": "Artiste",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Tampon...",
   "CANCEL": "ANNULER",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Partager",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Debut de lecture",
   "SWITCH_THEME": "Changer de theme",
