--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -10,6 +10,7 @@
   "ARTIST": "कलाकार",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A से Z",
   "BUFFERING": "बफर हो रहा है...",
   "CANCEL": "कैंसिल",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "ऐप मोड",
   "SHARE": "शेयर",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "प्लेबैक शुरू हो रहा है",
   "SWITCH_THEME": "थीम बदलें",
