--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -10,6 +10,7 @@
   "ARTIST": "アーティスト",
   "ARTIST_SINGLE": "アーティスト",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "テーマ",
   "SHARE": "共有",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "再生開始",
   "SWITCH_THEME": "テーマを変更",
