--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -10,6 +10,7 @@
   "ARTIST": "Mpanakanto",
   "ARTIST_SINGLE": "Mpanakanto",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Tampon...",
   "CANCEL": "FOANANA",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Zaraina",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Fanombohana ny famakiana",
   "SWITCH_THEME": "Hanova lohahevitra",
