--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -10,6 +10,7 @@
   "ARTIST": "Artistas",
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCELAR",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Compartilhar",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Trocar tema",
@@ -157,5 +159,3 @@
   "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
   "YOUTUBE_WELCOME_TITLE": "Let's Go"
 }
-
-
