--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -10,6 +10,7 @@
   "ARTIST": "艺术家",
   "ARTIST_SINGLE": "艺术家",
   "ASCENDING": "Ascending",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A 到 Z",
   "BUFFERING": "缓冲中...",
   "CANCEL": "取消",
@@ -137,6 +138,7 @@
   "SETTING_THEME_TITLE": "主题",
   "SHARE": "分享",
   "SHOW_ALBUM": "Show album",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "开启播放中",
   "SWITCH_THEME": "切换主题",
@@ -157,5 +159,3 @@
   "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
   "YOUTUBE_WELCOME_TITLE": "Let's Go"
 }
-
-
