✨Configuration: Add more customization options
- Expose `showTrackProgressOnTaskbar`.
- Expose `automaticallyAddOtherSongsFromCollectionToNowPlaying`.
- Expose `automaticallyShowNowPlayingScreenAfterPlaying`.

--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -138,8 +138,9 @@
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
-  "SORT_BY": "Сортировать",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SORT_BY": "Сортировать",
   "STARTING_PLAYBACK": "Воспроизведение",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
