--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -138,6 +138,7 @@
   "SETTING_THEME_TITLE": "Način",
   "SHARE": "Deli",
   "SHOW_ALBUM": "Pokaži album",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Filter",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
