--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -117,6 +117,7 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Dela",
   "SHOW_ALBUM": "Visa album",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sortera Enligt",
   "STARTING_PLAYBACK": "Startar uppspelning",
