--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -9,7 +9,7 @@
   "ALBUM_SINGLE": "アルバム",
   "ARTIST": "アーティスト",
   "ARTIST_SINGLE": "アーティスト",
-  "ASCENDING": "Ascending",
+  "ASCENDING": "昇順",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
@@ -17,7 +17,7 @@
   "COLLECTION": "コレクション",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "端末に保存されているアルバムを削除しますか？",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "削除しますか？",
-  "COLLECTION_INDEXING_HINT": "Adding your music ...",
+  "COLLECTION_INDEXING_HINT": "音楽を追加中...",
   "COLLECTION_INDEXING_LABEL": "端末の音楽を同期中。\nアプリを終了しないでください。",
   "COLLECTION_INFO_SUBHEADER": "アルバムについて",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "アルバムをもっと見る",
@@ -36,14 +36,14 @@
   "COLLECTION_TRACKS_SUBHEADER": "トラック",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
-  "COMING_UP": "開発中",
-  "CREATE": "Create",
-  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
-  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
+  "COMING_UP": "次の曲",
+  "CREATE": "作成",
+  "CREATE_NEW_PLAYLIST": "新しいプレイリストを作成",
+  "CREATE_PLAYLIST_SUBHEADER": "新しいプレイリストを作成して音楽を追加します",
   "DATE_ADDED": "追加日時",
   "DELETE": "削除",
   "DELETE_TRACK": "トラックを削除",
-  "DESCENDING": "Descending",
+  "DESCENDING": "降順",
   "DISCORD": "Discordサーバー",
   "DOWNLOAD_UPDATE": "アップデートをダウンロード",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
@@ -59,8 +59,8 @@
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
   "LYRICS_RETRIEVING": "歌詞を受信中...",
   "MENU": "メニュー",
-  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
-  "NEXT": "Next",
+  "M_TRACKS_AND_N_ALBUMS": "M トラック & N アルバム",
+  "NEXT": "次へ",
   "NO": "いいえ",
   "NOTIFICATION_LYRICS_SUBTITLE": "歌詞を通知パネルに表示する",
   "NOTIFICATION_LYRICS_TITLE": "歌詞を通知に表示",
@@ -74,27 +74,27 @@
   "NO_INTERNET_SUBTITLE": "接続を確認してください。",
   "NO_INTERNET_TITLE": "インターネットに接続されていません",
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
-  "N_TRACKS": "N tracks",
+  "N_TRACKS": "N トラック",
   "OK": "OK",
   "OPTIONS": "オプション",
-  "PAUSE": "Pause",
-  "PLAY": "Play",
-  "PLAYLIST": "Playlists",
+  "PAUSE": "一時停止",
+  "PLAY": "再生",
+  "PLAYLIST": "プレイリスト",
   "PLAYLISTS_CREATE": "新しいプレイリストを作成",
-  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
+  "PLAYLISTS_SUBHEADER": "デバイスで利用できるプレイリスト",
   "PLAYLISTS_TEXT_FIELD_HINT": "新しいプレイリストの名前",
   "PLAYLISTS_TEXT_FIELD_LABEL": "プレイリスト名",
   "PLAYLIST_ADD_DIALOG_BODY": "このトラックを追加するプレイリストを選択してください",
   "PLAYLIST_ADD_DIALOG_TITLE": "プレイリストに追加",
   "PLAYLIST_TRACKS_SUBHEADER": "このプレイリストには以下のトラックがあります",
   "PLAY_NOW": "今すぐ再生",
-  "PREVIOUS": "Previous",
+  "PREVIOUS": "前へ",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
-  "REINDEX": "Reindex",
+  "REINDEX": "再インデックス",
   "REMOVE": "削除",
-  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
-  "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
+  "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
+  "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
   "SAVE_TO_DOWNLOADS": "ダウンロードに保存",
@@ -104,7 +104,7 @@
   "SEARCH_NO_RECENT_SEARCHES": "ここに最近の検索が表示されます",
   "SEARCH_RESULT_LOADER_LABEL": "音楽を取得中...",
   "SEARCH_WELCOME": "Search Harmonoid...",
-  "SEE_ALL": "See All",
+  "SEE_ALL": "すべて見る",
   "SELECTED_DIRECTORIES": "これらが見つかりました",
   "SELECTED_DIRECTORY": "フォルダを選択:",
   "SETTING": "設定",
@@ -137,7 +137,7 @@
   "SETTING_THEME_SUBTITLE": "アプリのテーマをライトまたはダークに変更します",
   "SETTING_THEME_TITLE": "テーマ",
   "SHARE": "共有",
-  "SHOW_ALBUM": "Show album",
+  "SHOW_ALBUM": "アルバムを表示",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
   "SORT_BY": "Sort By",
@@ -145,7 +145,7 @@
   "SWITCH_THEME": "テーマを変更",
   "THEME_MODE_DARK": "ダーク",
   "THEME_MODE_LIGHT": "ライト",
-  "THEME_MODE_SYSTEM": "System",
+  "THEME_MODE_SYSTEM": "システム",
   "TRACK": "トラック",
   "TRACKS_FROM_ARTIST": "トラック",
   "TRACK_SINGLE": "トラック",
