🌐 Add new strings

--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -77,6 +77,7 @@
   "N_TRACKS": "N tracks",
   "OK": "OK",
   "OPTIONS": "Safidy",
+  "ORDER": "Order",
   "PAUSE": "Pause",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -140,6 +141,7 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SORT": "Sort",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Fanombohana ny famakiana",
   "SWITCH_THEME": "Hanova lohahevitra",
