--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -64,6 +64,7 @@
   "NO": "NEJ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
   "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
+  "ORDER": "Order",
   "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
   "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
   "PLAY_NOW": "Spela nu",
@@ -119,6 +120,7 @@
   "SHOW_ALBUM": "Visa album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SORT": "Sort",
   "SORT_BY": "Sortera Enligt",
   "STARTING_PLAYBACK": "Startar uppspelning",
   "SWITCH_THEME": "Byt tema",
