--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -77,6 +77,7 @@
   "N_TRACKS": "N müzik",
   "OK": "TAMAM",
   "OPTIONS": "Seçenekler",
+  "ORDER": "Order",
   "PAUSE": "Durdur",
   "PLAY": "Oynat",
   "PLAYLIST": "Oynatma listeleri",
@@ -140,6 +141,7 @@
   "SHOW_ALBUM": "Albümü görüntüle",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Bir parça oynattıktan sonra \"Now playing\" ekranına geç",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SORT": "Sort",
   "SORT_BY": "Sırala",
   "STARTING_PLAYBACK": "Oynatmaya başlanıyor...",
   "SWITCH_THEME": "Temayı değiştir",
