--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -77,6 +77,7 @@
   "N_TRACKS": "N треков",
   "OK": "ОК",
   "OPTIONS": "Параметры",
+  "ORDER": "Order",
   "PAUSE": "Пауза",
   "PLAY": "Плей",
   "PLAYLIST": "Плейлисты",
@@ -140,6 +141,7 @@
   "SHOW_ALBUM": "Показать альбом",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SORT": "Sort",
   "SORT_BY": "Сортировать",
   "STARTING_PLAYBACK": "Воспроизведение",
   "SWITCH_THEME": "Сменить тему",
