--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -77,6 +77,7 @@
   "N_TRACKS": "N pesmi",
   "OK": "OK",
   "OPTIONS": "Opcije",
+  "ORDER": "Order",
   "PAUSE": "Pause",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
@@ -140,6 +141,7 @@
   "SHOW_ALBUM": "Pokaži album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SORT": "Sort",
   "SORT_BY": "Filter",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
   "SWITCH_THEME": "Zamenjaj temo",
