--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -39,7 +39,7 @@
   "COMING_UP": "Chegando",
   "CREATE": "Criar",
   "CREATE_NEW_PLAYLIST": "CRIAR NOVA PLAYLIST",
-  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
+  "CREATE_PLAYLIST_SUBHEADER": "Crie uma nova lista de reprodução para adicionar sua música",
   "DATE_ADDED": "Data adicionada",
   "DELETE": "Deletar",
   "DELETE_TRACK": "Deletar música",
@@ -52,7 +52,7 @@
   "EXIT_TITLE": "Sair",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
-  "KNOW_MORE": "KNOW MORE",
+  "KNOW_MORE": "SABER MAIS",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Pelo menos uma pasta precisa permanecer em sua coleção.",
   "LISTENING_TO_MUSIC": "Ouvindo música 💜",
   "LYRICS": "Letras",
@@ -89,7 +89,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à lista de reprodução",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
   "PLAY_NOW": "Reproduzir agora",
-  "PREVIOUS": "Previous",
+  "PREVIOUS": "Anterior",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "ATUALIZAR",
   "REINDEX": "Reindexar",
