--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -79,7 +79,7 @@
   "OPTIONS": "Opções",
   "ORDER": "Pedido",
   "PAUSE": "Pausar",
-  "PLAY": "Reproduzir
+  "PLAY": "Reproduzir",
   "PLAYLIST": "Listas de reprodução",
   "PLAYLISTS_CREATE": "Criar uma nova lista de reprodução",
   "PLAYLISTS_SUBHEADER": "Listas de reprodução disponíveis no seu dispositivo",
