🌐 Fix: Unable to switch language to sv-SE

--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -139,5 +139,26 @@
   "YOUTUBE_NO_RESULTS": "Inget sådant hittades.",
   "YOUTUBE_WELCOME": "Sök musik eller ange länk",
   "YOUTUBE_WELCOME_SUBTITLE": "Rekommendationer kommer syns här baserat på vad du lyssnar på.",
-  "YOUTUBE_WELCOME_TITLE": "Då kör vi"
+  "YOUTUBE_WELCOME_TITLE": "Då kör vi",
+  "NOW_PLAYING": "Now playing",
+  "NOW_PLAYING_NEXT_TRACK": "NEXT",
+  "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
+  "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
+  "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
+  "NO_COLLECTION_TITLE": "Empty Collection",
+  "NO_DOWNLOAD_UPDATE": "Your app is already updated",
+  "NO_INTERNET_SUBTITLE": "Check your connection.",
+  "NO_INTERNET_TITLE": "No Internet",
+  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "N_TRACKS": "N tracks",
+  "OK": "OKAY",
+  "OPTIONS": "Options",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
+  "PLAYLIST": "Playlists",
+  "PLAYLISTS_CREATE": "Create a new playlist",
+  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Give a name to your new playlist...",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
+  "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track"
 }
