Update Japanese translaion #190
Update Japanese translaion #190

--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -27,7 +27,7 @@
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "削除しますか？",
   "COLLECTION_SEARCH_LABEL": "コレクションから検索",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "コレクションからは見つかりませんでした",
-  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "見つかりませんでした",
   "COLLECTION_SEARCH_WELCOME": "アルバムとトラック、アーティストを検索...",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "検索して保存した音楽はここに表示されます。\n更新ボタンをタップすると新しい曲を表示します。",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "最新のアルバム",
@@ -50,11 +50,11 @@
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
   "EXIT_SUBTITLE": "アプリを終了しますか？",
   "EXIT_TITLE": "終了",
-  "GO_TO_SETTINGS": "GO TO SETTINGS",
+  "GO_TO_SETTINGS": "設定に移動する",
   "INTERNET_ERROR": "インターネット接続を確認してください。",
   "KNOW_MORE": "もっと見る",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
-  "LISTENING_TO_MUSIC": "Listening to music 💜",
+  "LISTENING_TO_MUSIC": "音楽を聴く 💜",
   "LYRICS": "歌詞",
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
   "LYRICS_RETRIEVING": "歌詞を受信中...",
@@ -73,7 +73,7 @@
   "NO_DOWNLOAD_UPDATE": "すでに最新版です",
   "NO_INTERNET_SUBTITLE": "接続を確認してください。",
   "NO_INTERNET_TITLE": "インターネットに接続されていません",
-  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
+  "NO_PLAYLISTS_FOUND": "プレイリストが見つかりません\n新しくプレイリストを作成してください",
   "N_TRACKS": "N トラック",
   "OK": "OK",
   "OPTIONS": "オプション",
@@ -139,8 +139,8 @@
   "SETTING_THEME_TITLE": "テーマ",
   "SHARE": "共有",
   "SHOW_ALBUM": "アルバムを表示",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "音楽を再生した後、自動的に \"再生中\" の画面を表示する",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "タスクバーに音楽の進捗状況を表示する",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "再生開始",
@@ -159,6 +159,6 @@
   "YOUTUBE_INTERNET_ERROR": "オンラインに復帰するまで端末の音楽を再生しましょう。",
   "YOUTUBE_NO_RESULTS": "見つかりませんでした。",
   "YOUTUBE_WELCOME": "音楽を検索するかリンクを入力",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "YOUTUBE_WELCOME_SUBTITLE": "あなたが聞いた音楽を基におすすめがここに表示されます",
   "YOUTUBE_WELCOME_TITLE": "Let's Go"
 }
