add buttons tooltips

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
   "EXIT_TITLE": "Exit",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Lyrics not found.",
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
   "MENU": "Menu",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
   "NO": "NO",
@@ -91,10 +93,11 @@
   "PLAY_NOW": "Play now",
   "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Recommendations",
-  "REFRESH": "REFRESH",
+  "REFRESH": "Refresh",
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Switch theme",
   "THEME_MODE_DARK": "Dark",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Tracks",
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "Transfers",
+  "UNMUTE": "Unmute",
   "WARNING": "Warning",
   "YEAR": "Year",
   "YES": "YES",
