--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "Télécharger la mise à jour",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "TODOActiver le flou acrylique Windows",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid ?",
   "EXIT_TITLE": "Quitter",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Paroles non trouvées",
   "LYRICS_RETRIEVING": "Récupération des paroles...",
   "MENU": "Menu",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pistes & N albums",
   "NEXT": "Suivant",
   "NO": "Non",
@@ -95,6 +97,7 @@
   "REINDEX": "Ré-indexer",
   "REMOVE": "Supprimer",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Résultats pour la requête \"QUERY\"",
   "RETRIEVING_INFO": "Récupération d'informations",
   "RETRIEVING_LINK": "Récupération du flux",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Visualiser l'album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Début de lecture",
   "SWITCH_THEME": "Changer de thème",
   "THEME_MODE_DARK": "Sombre",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Chansons de cet artiste",
   "TRACK_SINGLE": "Chanson",
   "TRANSFERS": "Transferts",
+  "UNMUTE": "Unmute",
   "WARNING": "Attention",
   "YEAR": "Année",
   "YES": "Oui",
