--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "डाउनलोड अपडेट",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "क्या आप Harmonoid को छोड़ना चाहते हैं?",
   "EXIT_TITLE": "बंद",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "गाने के बोल नहीं मिले",
   "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
   "MENU": "मेन्यू",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
   "NO": "नहीं",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "हटाये",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "प्लेबैक शुरू हो रहा है",
   "SWITCH_THEME": "थीम बदलें",
   "THEME_MODE_DARK": "डार्क",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Tracks from this artist.",
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "ट्रांसफर्स",
+  "UNMUTE": "Unmute",
   "WARNING": "चेतावनी",
   "YEAR": "Year",
   "YES": "हाँ",
