--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "FRISSÍTÉS LETÖLTÉSE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Windows áttetsző háttér engedélyezése",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Biztosan kilépsz a Harmonoidból?",
   "EXIT_TITLE": "Kilépés",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Nem található énekszöveg.",
   "LYRICS_RETRIEVING": "Énekszöveg betöltése...",
   "MENU": "Menü",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
   "NO": "NEM",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "ELTÁVOLÍTÁS",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Azonosítás...",
   "RETRIEVING_LINK": "Adatfolyam betöltése...",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Lejátszás indítása...",
   "SWITCH_THEME": "Téma váltása",
   "THEME_MODE_DARK": "Sötét",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Számok az előadótól:",
   "TRACK_SINGLE": "Szám",
   "TRANSFERS": "Átvitelek",
+  "UNMUTE": "Unmute",
   "WARNING": "Warning",
   "YEAR": "Year",
   "YES": "IGEN",
