--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Wilt u Harmonoid afsluiten?",
   "EXIT_TITLE": "Afsluiten",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Songteksten niet gevonden.",
   "LYRICS_RETRIEVING": "Songteksten ophalen...",
   "MENU": "Menu",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
   "NO": "NEE",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "VERWIJDEREN",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Info ophalen",
   "RETRIEVING_LINK": "Stream ophalen",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Afspelen starten",
   "SWITCH_THEME": "Wissel Thema",
   "THEME_MODE_DARK": "Donker",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Nummers van deze artiest.",
   "TRACK_SINGLE": "Nummer",
   "TRANSFERS": "Overdrachten",
+  "UNMUTE": "Unmute",
   "WARNING": "Waarschuwing",
   "YEAR": "Year",
   "YES": "JA",
