--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
   "EXIT_TITLE": "Sair",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Letras não disponíveis.",
   "LYRICS_RETRIEVING": "Baixando letras...",
   "MENU": "Menu",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M faixas & N albums",
   "NEXT": "Próxima",
   "NO": "NÃO",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindexar",
   "REMOVE": "REMOVER",
   "REMOVE_FROM_PLAYLIST": "Remover da lista de reprodução",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Mostrar album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Saltar automaticamente para \"Agora tocando\" tela depois de reproduzir uma faixa",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Mostrar o progresso da trilha na barra de tarefas",
+  "SHUFFLE": "Shuffle",
   "SORT": "Organizar",
   "SORT_BY": "Ordenar Por",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Iniciando a reprodução",
   "SWITCH_THEME": "Trocar tema",
   "THEME_MODE_DARK": "Escuro",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Faixas deste artista.",
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
+  "UNMUTE": "Unmute",
   "WARNING": "Aviso",
   "YEAR": "Ano",
   "YES": "SIM",
