--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
   "EXIT_TITLE": "Izhod",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
   "MENU": "Meni",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pesmi & N albumov",
   "NEXT": "Next",
   "NO": "NE",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindeksiraj",
   "REMOVE": "ODSTRANI",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Pokaži album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Filter",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
   "SWITCH_THEME": "Zamenjaj temo",
   "THEME_MODE_DARK": "Temni",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Pesmi od tega ustvarjalca.",
   "TRACK_SINGLE": "Pesem",
   "TRANSFERS": "Prenosi",
+  "UNMUTE": "Unmute",
   "WARNING": "Opozorilo",
   "YEAR": "Leto",
   "YES": "JA",
