--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
   "ENABLE_125_SCALING": "Aktivera 125% uppskalning.",
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Vill du avsluta Harmonoid?",
   "EXIT_TITLE": "Avsluta",
   "GO_TO_SETTINGS": "GÅ TILL INSTÄLLNINGAR",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Låttexter inte funna.",
   "LYRICS_RETRIEVING": "Hämtar låttexter...",
   "MENU": "Meny",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M låtar & N album",
   "NEXT": "Nästa",
   "NO": "NEJ",
@@ -95,6 +97,7 @@
   "SETTING_APP_VERSION_LATEST": "Senaste versionen",
   "SETTING_APP_VERSION_SUBTITLE": "Information om nuvarande version av applikationen",
   "SETTING_APP_VERSION_TITLE": "Version",
+  "REPEAT": "Repeat",
   "SETTING_GITHUB": "GITHUB",
   "SETTING_INDEXING_DONE": "Indexerad",
   "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexerat NUMBER_STRING av TOTAL_STRING låtar...",
@@ -120,6 +123,7 @@
   "SHOW_ALBUM": "Visa album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sortera Enligt",
   "STARTING_PLAYBACK": "Startar uppspelning",
@@ -143,6 +147,7 @@
   "NOW_PLAYING": "Now playing",
   "NOW_PLAYING_NEXT_TRACK": "NEXT",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
+  "SPEED": "Speed",
   "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
   "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
   "NO_COLLECTION_TITLE": "Empty Collection",
@@ -152,6 +157,7 @@
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
   "N_TRACKS": "N tracks",
   "OK": "OKAY",
+  "UNMUTE": "Unmute",
   "OPTIONS": "Options",
   "PAUSE": "Pause",
   "PLAY": "Play",
