--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "GÜNCELLE",
   "ENABLE_125_SCALING": "125% ölçeklemeyi etkinleştir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u etkinleştir",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Harmonoid'den çıkmak istediğine emin misin?",
   "EXIT_TITLE": "Çık",
   "GO_TO_SETTINGS": "AYARLARA GİT",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Söz bulunamado.",
   "LYRICS_RETRIEVING": "Sözler getiriliyor...",
   "MENU": "Menü",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M Müzik ile N Albüm",
   "NEXT": "Sonraki",
   "NO": "HAYIR",
@@ -95,6 +97,7 @@
   "REINDEX": "Yenile",
   "REMOVE": "SİL",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "\"QUERY\" için sonuçlar",
   "RETRIEVING_INFO": "Bilgiler getiriliyor...",
   "RETRIEVING_LINK": "Bağlantı getiriliyor...",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Albümü görüntüle",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Bir parça oynattıktan sonra \"Now playing\" ekranına geç",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sırala",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Oynatmaya başlanıyor...",
   "SWITCH_THEME": "Temayı değiştir",
   "THEME_MODE_DARK": "Karanlık",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Müzikler",
   "TRACK_SINGLE": "Müzik",
   "TRANSFERS": "Transferler",
+  "UNMUTE": "Unmute",
   "WARNING": "UYARI",
   "YEAR": "Yıl",
   "YES": "EVET",
