--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "下载更新",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
   "EXIT_TITLE": "退出",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "歌词未找到。",
   "LYRICS_RETRIEVING": "获取歌词中...",
   "MENU": "菜单",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
   "NO": "否",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "移除",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "获取详情中",
   "RETRIEVING_LINK": "获取串流中",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "开启播放中",
   "SWITCH_THEME": "切换主题",
   "THEME_MODE_DARK": "暗色",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "来自该艺术家的歌曲。",
   "TRACK_SINGLE": "歌曲",
   "TRANSFERS": "传输",
+  "UNMUTE": "Unmute",
   "WARNING": "警告",
   "YEAR": "Year",
   "YES": "是",
