--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "SINTOMY NY FANAVAOZANA VAOVAO",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ampandehano ny 'Windows acrylic blur'.",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Te hiala amin'ny Harmonoid ve ianao?",
   "EXIT_TITLE": "Miala",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Tsy hita ilay tonon-kira.",
   "LYRICS_RETRIEVING": "Famerenana tonon-kira ...",
   "MENU": "Menu",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
   "NO": "TSIA",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "FAFANA",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Show album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Fanombohana ny famakiana",
   "SWITCH_THEME": "Hanova lohahevitra",
   "THEME_MODE_DARK": "Maizina",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Hiranity mpanakanto ity.",
   "TRACK_SINGLE": "Hira",
   "TRANSFERS": "Famindrana",
+  "UNMUTE": "Unmute",
   "WARNING": "Tandremo",
   "YEAR": "Year",
   "YES": "ENY",
