--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -48,6 +48,7 @@
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
+  "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
@@ -59,6 +60,7 @@
   "LYRICS_NOT_FOUND": "Текст не найден.",
   "LYRICS_RETRIEVING": "Получение...",
   "MENU": "Меню",
+  "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
   "NEXT": "ДАЛЬШЕ",
   "NO": "НЕТ",
@@ -95,6 +97,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
+  "REPEAT": "Repeat",
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
   "RETRIEVING_INFO": "Получение информации",
   "RETRIEVING_LINK": "Получение ссылки",
@@ -141,8 +144,10 @@
   "SHOW_ALBUM": "Показать альбом",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Сортировать",
+  "SPEED": "Speed",
   "STARTING_PLAYBACK": "Воспроизведение",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
@@ -152,6 +157,7 @@
   "TRACKS_FROM_ARTIST": "Треки этого исполнителя.",
   "TRACK_SINGLE": "Трек",
   "TRANSFERS": "ПЕРЕДАЧИ",
+  "UNMUTE": "Unmute",
   "WARNING": "Предупреждение",
   "YEAR": "Год",
   "YES": "ДА",
